# case_btg

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
api-client/: Library API.postman_test_run.json  Library_API.postman_collection.json
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14c01f1ca940_add_fk_book_copies_hold_reservation_id.py  1e09979effb8_initial.py  420e63152b0e_add_loan_table.py  aa763b2822a0_create_users_authors_books_tables.py  bc96d9edf06f_add_reservation_table.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  authors.py  books.py  loans.py  reservations.py  router.py  system.py  users.py
backend/app/core/: __init__.py  cache.py  config.py  deps.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  redis.py  seed.py  session.py
backend/app/models/: __init__.py  author.py  base.py  book.py  enums.py  loan.py  reservation.py  user.py
backend/app/repositories/: __init__.py  author.py  base.py  book.py  loan.py  reservation.py  user.py
backend/app/schemas/: __init__.py  author.py  base.py  book.py  health.py  loan.py  reservation.py  user.py
backend/app/services/: __init__.py  auth.py  author.py  book.py  loan.py  reservation.py  user.py
backend/app/workers/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_books_integration.py  test_health.py  test_integration.py  test_loans_integration.py  test_rate_limit_cache.py  test_reservations_integration.py  test_security.py  test_services.py
frontend_streamlit/: README.md  app.py
frontend_streamlit/pages/: 1_Login.py  2_Catalog.py  3_My_Loans.py  4_My_Reservations.py  5_Admin.py  6_Admin_Users.py
frontend_streamlit/utils/: __init__.py  api_client.py  auth.py  formatters.py  state.py
